Fixed some issues with iPad Fixed Icon Warnings

--- a/OLL Finder/Base.lproj/Main.storyboard
+++ b/OLL Finder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,14 +23,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hfv-9h-j1o">
-                                <rect key="frame" x="16" y="513" width="432" height="35"/>
+                                <rect key="frame" x="16" y="521" width="432" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RlD-dd-bf4" customClass="ImageButton">
-                                <rect key="frame" x="33" y="20" width="90" height="90"/>
+                                <rect key="frame" x="33" y="28" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="XPd-dZ-Mhf"/>
                                     <constraint firstAttribute="width" constant="90" id="sOM-Wa-BbQ"/>
@@ -43,7 +43,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F4T-Ex-Vbm" customClass="ImageButton">
-                                <rect key="frame" x="16" y="139" width="80" height="80"/>
+                                <rect key="frame" x="16" y="147" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="08H-Mj-lwN"/>
                                     <constraint firstAttribute="width" constant="80" id="ffi-TI-KfN"/>
@@ -56,7 +56,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gyt-dP-FBV" customClass="ImageButton">
-                                <rect key="frame" x="104" y="139" width="80" height="80"/>
+                                <rect key="frame" x="104" y="147" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="eML-4F-jIx"/>
                                     <constraint firstAttribute="width" constant="80" id="t2g-qM-q0B"/>
@@ -69,7 +69,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4rb-CO-XfM" customClass="ImageButton">
-                                <rect key="frame" x="280" y="139" width="80" height="80"/>
+                                <rect key="frame" x="280" y="147" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="c41-NU-PuE"/>
                                     <constraint firstAttribute="width" constant="80" id="zNN-Ju-i2d"/>
@@ -82,7 +82,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DyM-h5-R6R" customClass="ImageButton">
-                                <rect key="frame" x="368" y="139" width="80" height="80"/>
+                                <rect key="frame" x="368" y="147" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="wRq-f9-oxc"/>
                                     <constraint firstAttribute="width" constant="80" id="wUj-83-1RB"/>
@@ -95,7 +95,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pCe-Zr-Kko" customClass="ImageButton">
-                                <rect key="frame" x="139" y="20" width="90" height="90"/>
+                                <rect key="frame" x="139" y="28" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="Lxn-ur-tOx"/>
                                     <constraint firstAttribute="width" constant="90" id="XC3-Gf-tnL"/>
@@ -108,7 +108,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Isl-Yb-tHe" customClass="ImageButton">
-                                <rect key="frame" x="245" y="20" width="90" height="90"/>
+                                <rect key="frame" x="245" y="28" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="QVu-qI-2Jj"/>
                                     <constraint firstAttribute="width" constant="90" id="fX0-VS-xXm"/>
@@ -121,7 +121,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1jL-NH-2CM" customClass="ImageButton">
-                                <rect key="frame" x="350" y="20" width="90" height="90"/>
+                                <rect key="frame" x="350" y="28" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="FFh-Md-m1e"/>
                                     <constraint firstAttribute="width" constant="90" id="bcw-nL-OAR"/>
@@ -134,7 +134,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lqT-an-7Et" customClass="ImageButton">
-                                <rect key="frame" x="192" y="139" width="80" height="80"/>
+                                <rect key="frame" x="192" y="147" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="TtK-Ww-3Yc"/>
                                     <constraint firstAttribute="width" constant="80" id="k3H-SB-gPF"/>
@@ -147,7 +147,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bNF-Zq-05i">
-                                <rect key="frame" x="464" y="0.0" width="304" height="1024"/>
+                                <rect key="frame" x="464" y="20" width="304" height="1004"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" restorationIdentifier="CaseCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CaseCell" rowHeight="68" id="z0p-qv-VNN" customClass="CaseTableViewCell">
@@ -165,7 +165,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m1v-dC-XCW">
-                                                    <rect key="frame" x="76" y="23.5" width="476" height="21"/>
+                                                    <rect key="frame" x="76" y="23.5" width="220" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -191,7 +191,7 @@
                                 </connections>
                             </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="oll1.png" translatesAutoresizingMaskIntoConstraints="NO" id="p29-E9-AUd">
-                                <rect key="frame" x="130" y="278" width="204" height="204"/>
+                                <rect key="frame" x="130" y="286" width="204" height="204"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -209,7 +209,7 @@
                             <constraint firstItem="RlD-dd-bf4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="33" id="Msg-Rb-Lm4"/>
                             <constraint firstItem="F4T-Ex-Vbm" firstAttribute="top" secondItem="RlD-dd-bf4" secondAttribute="bottom" constant="29" id="NCH-Gl-5VW"/>
                             <constraint firstItem="pCe-Zr-Kko" firstAttribute="leading" secondItem="RlD-dd-bf4" secondAttribute="trailing" constant="16" id="PAe-FI-VJY"/>
-                            <constraint firstItem="RlD-dd-bf4" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="PtL-k0-fbx"/>
+                            <constraint firstItem="RlD-dd-bf4" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="28" id="PtL-k0-fbx"/>
                             <constraint firstItem="lqT-an-7Et" firstAttribute="top" secondItem="DyM-h5-R6R" secondAttribute="top" id="TIE-bc-d71"/>
                             <constraint firstItem="gyt-dP-FBV" firstAttribute="leading" secondItem="F4T-Ex-Vbm" secondAttribute="trailing" constant="8" id="XLY-Jz-0OD"/>
                             <constraint firstItem="pCe-Zr-Kko" firstAttribute="top" secondItem="1jL-NH-2CM" secondAttribute="top" id="a46-Fr-Cp2"/>
@@ -217,7 +217,7 @@
                             <constraint firstItem="lqT-an-7Et" firstAttribute="leading" secondItem="gyt-dP-FBV" secondAttribute="trailing" constant="8" id="cFb-J9-OUz"/>
                             <constraint firstItem="pCe-Zr-Kko" firstAttribute="top" secondItem="RlD-dd-bf4" secondAttribute="top" id="cYL-SV-LGc"/>
                             <constraint firstItem="lqT-an-7Et" firstAttribute="top" secondItem="F4T-Ex-Vbm" secondAttribute="top" id="sCZ-93-nsX"/>
-                            <constraint firstItem="bNF-Zq-05i" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="uEM-G9-GvS"/>
+                            <constraint firstItem="bNF-Zq-05i" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="uEM-G9-GvS"/>
                             <constraint firstItem="4rb-CO-XfM" firstAttribute="leading" secondItem="lqT-an-7Et" secondAttribute="trailing" constant="8" id="ybG-s8-xR9"/>
                         </constraints>
                     </view>
@@ -236,7 +236,6 @@
                         <outletCollection property="cornerButtons" destination="lqT-an-7Et" id="fKV-ad-Tcc"/>
                         <outletCollection property="cornerButtons" destination="4rb-CO-XfM" id="0of-2j-aIc"/>
                         <outletCollection property="cornerButtons" destination="DyM-h5-R6R" id="tId-jt-0ub"/>
-                        <outletCollection property="sfddfg" destination="RlD-dd-bf4" id="3uK-WK-LZh"/>
                         <outletCollection property="crossButtons" destination="RlD-dd-bf4" id="YtN-mb-fJq"/>
                         <outletCollection property="crossButtons" destination="pCe-Zr-Kko" id="b8E-jv-uyJ"/>
                         <outletCollection property="crossButtons" destination="Isl-Yb-tHe" id="NrH-2R-Zkm"/>
