--- a/iphone.storyboard
+++ b/iphone.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -377,7 +376,7 @@
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="M6i-6y-z13">
-                                <rect key="frame" x="0.0" y="352" width="320" height="216"/>
+                                <rect key="frame" x="0.0" y="360" width="320" height="208"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CaseCell" rowHeight="68" id="2gA-DY-kfz" customClass="CaseTableViewCell">
@@ -414,16 +413,13 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KKg-eO-jwY" customClass="PlayButton">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KKg-eO-jwY">
                                                     <rect key="frame" x="280" y="2" width="32" height="52"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="32" id="77j-gt-JW9"/>
                                                         <constraint firstAttribute="height" constant="52" id="gjA-KI-BhI"/>
                                                     </constraints>
                                                     <state key="normal" image="YouTube-icon-full_color small.png"/>
-                                                    <connections>
-                                                        <segue destination="ldP-Df-bt2" kind="show" identifier="toVideoView" id="CEX-zE-y9q"/>
-                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TeM-1I-yHO">
                                                     <rect key="frame" x="68" y="41" width="244" height="22"/>
@@ -456,7 +452,6 @@
                                             <outlet property="algorithmLabel" destination="Ihc-29-2cg" id="fw1-UY-yEh"/>
                                             <outlet property="authorLabel" destination="TeM-1I-yHO" id="L25-Xj-QIQ"/>
                                             <outlet property="caseImage" destination="K57-l2-noH" id="YVr-wo-CKw"/>
-                                            <outlet property="playButton" destination="KKg-eO-jwY" id="jzn-IB-K7L"/>
                                             <outlet property="playerWidthConstraint" destination="77j-gt-JW9" id="W8n-s8-oHE"/>
                                             <outlet property="starWidthConstraint" destination="kvV-5Y-Zny" id="cL6-yE-3ay"/>
                                         </connections>
@@ -477,15 +472,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Rh-UF-S3X" customClass="YTPlayerView">
-                                <rect key="frame" x="129" y="288" width="62" height="35"/>
+                                <rect key="frame" x="128" y="288" width="64" height="43"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="7C7-Id-jhw"/>
-                                    <constraint firstAttribute="width" constant="62" id="v6N-Af-W3J"/>
+                                    <constraint firstAttribute="height" constant="43" id="7C7-Id-jhw"/>
+                                    <constraint firstAttribute="width" constant="64" id="v6N-Af-W3J"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PNf-BU-2fi">
-                                <rect key="frame" x="16" y="322" width="288" height="31"/>
+                                <rect key="frame" x="16" y="330" width="288" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="dNd-yD-pDQ"/>
                                 </constraints>
@@ -493,6 +488,17 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4U7-qL-fmq">
+                                <rect key="frame" x="128" y="287.5" width="64" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="2Wd-yw-dxu"/>
+                                    <constraint firstAttribute="width" constant="64" id="wQC-d0-D40"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="YouTube-icon-full_color medium.png"/>
+                                <connections>
+                                    <action selector="playButtonPressed:" destination="g6A-K5-0Yh" eventType="touchUpInside" id="rVt-23-drz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -501,6 +507,8 @@
                             <constraint firstAttribute="trailing" secondItem="M6i-6y-z13" secondAttribute="trailing" id="AWH-dg-doA"/>
                             <constraint firstItem="p6e-0h-ep7" firstAttribute="trailing" secondItem="dGr-zO-BX6" secondAttribute="trailingMargin" id="CSH-O8-SjQ"/>
                             <constraint firstItem="PNf-BU-2fi" firstAttribute="trailing" secondItem="dGr-zO-BX6" secondAttribute="trailingMargin" id="GJo-gY-ZPe"/>
+                            <constraint firstItem="4U7-qL-fmq" firstAttribute="centerY" secondItem="0Rh-UF-S3X" secondAttribute="centerY" id="Jg8-0M-F9G"/>
+                            <constraint firstItem="4U7-qL-fmq" firstAttribute="centerX" secondItem="0Rh-UF-S3X" secondAttribute="centerX" id="Pky-Xi-ne7"/>
                             <constraint firstItem="p6e-0h-ep7" firstAttribute="top" secondItem="lGG-7d-aQN" secondAttribute="bottom" constant="14" id="a8m-UQ-9AJ"/>
                             <constraint firstItem="scv-G8-BFV" firstAttribute="top" secondItem="M6i-6y-z13" secondAttribute="bottom" id="ap4-yg-QsM"/>
                             <constraint firstItem="M6i-6y-z13" firstAttribute="top" secondItem="PNf-BU-2fi" secondAttribute="bottom" constant="-1" id="g29-Wu-1Aq"/>
@@ -521,56 +529,16 @@
                         <outlet property="playerView" destination="0Rh-UF-S3X" id="lix-zT-gze"/>
                         <outlet property="playerViewHeight" destination="7C7-Id-jhw" id="GHv-iy-Wzd"/>
                         <outlet property="playerViewWidth" destination="v6N-Af-W3J" id="Ubo-uF-xU0"/>
+                        <outlet property="videoPlayButton" destination="4U7-qL-fmq" id="qPp-3w-gmx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="znV-6k-T8z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="939.375" y="531.33802816901414"/>
         </scene>
-        <!--Video View Controller-->
-        <scene sceneID="9Sq-L4-JhL">
-            <objects>
-                <viewController id="ldP-Df-bt2" customClass="VideoViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="X4u-VM-g8M"/>
-                        <viewControllerLayoutGuide type="bottom" id="Qen-W5-GJp"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="JRS-Vs-MYF">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Andres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y8Q-AJ-9t1">
-                                <rect key="frame" x="139" y="256" width="55" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fQi-JH-09t" customClass="YTPlayerView">
-                                <rect key="frame" x="0.0" y="64" width="320" height="180"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="fQi-JH-09t" secondAttribute="height" multiplier="16:9" id="ZXa-yp-Xmy"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="fQi-JH-09t" firstAttribute="leading" secondItem="JRS-Vs-MYF" secondAttribute="leading" id="6AK-hZ-oG3"/>
-                            <constraint firstAttribute="trailing" secondItem="fQi-JH-09t" secondAttribute="trailing" id="LJD-40-4yR"/>
-                            <constraint firstItem="fQi-JH-09t" firstAttribute="top" secondItem="X4u-VM-g8M" secondAttribute="bottom" id="OpD-uT-33k"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="playerView" destination="fQi-JH-09t" id="KKJ-9O-o99"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kS3-MU-2sA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1674.375" y="528.16901408450701"/>
-        </scene>
     </scenes>
     <resources>
+        <image name="YouTube-icon-full_color medium.png" width="128" height="90"/>
         <image name="YouTube-icon-full_color small.png" width="64" height="104"/>
         <image name="oll1.png" width="204" height="204"/>
         <image name="ollarrow.png" width="174" height="174"/>
