--- a/OLL Finder/Base.lproj/Main.storyboard
+++ b/OLL Finder/Base.lproj/Main.storyboard
@@ -360,7 +360,10 @@
                             </imageView>
                             <tableView hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4pa-ig-Cr0">
                                 <rect key="frame" x="0.0" y="349" width="387" height="675"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="387" id="bbF-8Z-3RC"/>
+                                </constraints>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CaseCell" rowHeight="68" id="uUS-Lc-R7y" customClass="CaseTableViewCell">
@@ -492,17 +495,16 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.44810267860000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="4pa-ig-Cr0" secondAttribute="trailing" id="0ki-Kq-QI7"/>
                             <constraint firstItem="epU-ru-QpT" firstAttribute="centerX" secondItem="Y75-Jb-YAa" secondAttribute="centerX" id="4wr-og-Hvp"/>
                             <constraint firstItem="zeh-E7-sOS" firstAttribute="centerX" secondItem="Y75-Jb-YAa" secondAttribute="centerX" id="6eE-82-b9P"/>
                             <constraint firstItem="Udf-qE-aCb" firstAttribute="top" secondItem="nfs-gT-kp4" secondAttribute="bottom" constant="22" id="EBg-8n-Bcf"/>
                             <constraint firstItem="Udf-qE-aCb" firstAttribute="centerX" secondItem="Y75-Jb-YAa" secondAttribute="centerX" id="Icm-97-Q8f"/>
-                            <constraint firstItem="4pa-ig-Cr0" firstAttribute="leading" secondItem="Y75-Jb-YAa" secondAttribute="leading" id="OiL-B4-0Ke"/>
                             <constraint firstItem="lJs-pb-aA0" firstAttribute="centerX" secondItem="zeh-E7-sOS" secondAttribute="centerX" id="RqB-rr-sAg"/>
                             <constraint firstItem="zeh-E7-sOS" firstAttribute="top" secondItem="epU-ru-QpT" secondAttribute="bottom" constant="8" id="SHk-Sd-giv"/>
                             <constraint firstItem="epU-ru-QpT" firstAttribute="top" secondItem="Udf-qE-aCb" secondAttribute="bottom" constant="22" id="UFe-mn-gBb"/>
                             <constraint firstItem="I6A-6D-idg" firstAttribute="centerX" secondItem="Y75-Jb-YAa" secondAttribute="centerX" id="hP9-Wx-Ssn"/>
                             <constraint firstItem="4pa-ig-Cr0" firstAttribute="top" secondItem="I6A-6D-idg" secondAttribute="bottom" id="lNJ-Rs-RaM"/>
+                            <constraint firstItem="4pa-ig-Cr0" firstAttribute="centerX" secondItem="Y75-Jb-YAa" secondAttribute="centerX" id="mAY-MO-kOi"/>
                             <constraint firstItem="pmd-Xw-1tY" firstAttribute="top" secondItem="4pa-ig-Cr0" secondAttribute="bottom" id="sjy-RE-ro7"/>
                             <constraint firstItem="I6A-6D-idg" firstAttribute="top" secondItem="zeh-E7-sOS" secondAttribute="bottom" id="yIK-Yd-CC2"/>
                             <constraint firstItem="lJs-pb-aA0" firstAttribute="centerY" secondItem="zeh-E7-sOS" secondAttribute="centerY" id="yL1-61-l4v"/>
